--- a/Starter3/Starter3/Makefile
+++ b/Starter3/Starter3/Makefile
@@ -39,8 +39,8 @@ YFLAGS  =-dtvy
 #LEXER_OBJ =handlex.o
 LEXER_OBJ =scanner.o
 PARSER_OBJ=parser.o
-AST_OBJ   =ast.o stack.o symbol_table.o semantic.o symbol.o
-CODE_OBJ  =codegen.o  
+AST_OBJ   =ast.o stack.o semantic.o symbol.o codegen.o
+#CODE_OBJ  =codegen.o  
 OBJs      =compiler467.o globalvars.o $(LEXER_OBJ) \
            $(PARSER_OBJ) $(AST_OBJ)   
 
